# Mandarin-1c_tasks

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
api/front/: router.py  service.py  ws.py
api/utils/: __init__.py  cat.py  loggers.py  router.py  utils.py
api/v2/: bitrix.py  bxtask.py  constants.py  router.py  utils.py
api/v3/: constants.py  router.py
front/: build.bat
front/guntt/: README.md  package-lock.json  package.json
front/konva/: package.json
front/public/: asset-manifest.json  index.html
logs/: 2025-04-14_09-39-59_РА-00000961.json  2025-04-14_09-45-26_РА-00000961.json  2025-04-14_09-45-41_РА-00000961.json  2025-04-14_09-47-38_РА-00000961.json  2025-04-14_09-49-18_РА-00000961.json  2025-04-14_09-50-03_РА-00000961.json  2025-04-14_09-51-08_РА-00000961.json  2025-04-14_09-53-36_РА-00000961.json  2025-04-14_10-01-04_РА-00000961.json  2025-04-14_10-03-12_РА-00000961.json  2025-04-14_10-04-32_РА-00000961.json  2025-04-14_12-32-50_РА-00000961.json  2025-04-14_12-37-29_РА-00000961.json  2025-04-14_12-39-01_РА-00000961.json  2025-04-14_12-40-22_РА-00000961.json  2025-04-14_12-48-11_РА-00000961.json
src/: config.py  main.py  schemas.py  service.py  utils.py  websocket.py
src/bitrix/: bx_calendar.py  bxcalendar.py  file.py  requests.py  schedule.py  service.py  task.py  websocket_schemas.py
src/routers/: __init__.py  api.py  front.py  one_ass.py  tests.py  ws.py
src/schemas/: front.py  main.py  one_ass.py
src/service/: request_sample.json  test.py
src/tests/: test.py
(+160 files in other folders)
