[tool.poetry]
name = "mandarin-1c-tasks"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiocache = "0.12.3"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.11.6"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
asttokens = "2.4.1"
attrs = "24.2.0"
beartype = "0.19.0"
click = "8.1.7"
colorama = "0.4.6"
fast-bitrix24 = "1.8.2"
fastapi = "0.115.5"
frozenlist = "1.5.0"
h11 = "0.14.0"
icontract = "2.7.1"
idna = "3.10"
more-itertools = "10.5.0"
multidict = "6.1.0"
propcache = "0.2.0"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
python-dotenv = "1.0.1"
six = "1.16.0"
sniffio = "1.3.1"
starlette = "0.41.3"
tqdm = "4.67.0"
typing-extensions = "4.12.2"
uvicorn = "0.32.0"
yarl = "1.17.2"
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[tool.black]
# https://github.com/psf/black
target-version = ["py312"]
line-length = 120
color = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
